Add CORS_ORIGIN env var, TYPEORM_SYNCHRONIZE config, and improve setup_local.sh with dependency checks

--- a/server/.env.example
+++ b/server/.env.example
@@ -7,3 +7,11 @@ DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=postgres
 DB_NAME=bpm_editor
+
+# CORS - Origens permitidas (separadas por vírgula)
+CORS_ORIGIN=http://localhost:5173,http://localhost:3000
+
+# TypeORM - Sincronização automática de schema (MVP)
+# true: cria/altera tabelas automaticamente (desenvolvimento)
+# false: usa schema existente (produção com migrations)
+TYPEORM_SYNCHRONIZE=true
