Add migrations support: start:prod with migration:run, CORS from env, Procfile updated

--- a/server/.env.production
+++ b/server/.env.production
@@ -7,3 +7,11 @@ PORT=3001
 # DB_USER=
 # DB_PASSWORD=
 # DB_NAME=
+
+# CORS - Aceita Vercel e previews
+# Exemplo: https://bpm-editor.vercel.app,https://*.vercel.app
+CORS_ORIGIN=https://bpm-editor.vercel.app
+
+# TypeORM - Em produção, desabilita synchronize
+# Migration será executada via npm run start:prod
+TYPEORM_SYNCHRONIZE=false
