--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,10 @@
     "dev": "nest start --watch",
     "build": "nest build",
     "start": "node dist/main.js",
+    "start:prod": "npm run migration:run && node dist/main.js",
+    "migration:generate": "typeorm migration:generate",
+    "migration:run": "typeorm migration:run",
+    "migration:revert": "typeorm migration:revert",
     "db:setup": "node --loader ts-node/esm scripts/setup-db.ts",
     "db:seed": "node --loader ts-node/esm scripts/seed-db.ts"
   },
