feat(ai): add guided Gemini BPMN draft endpoint with admin audit logs

--- a/.env.example
+++ b/.env.example
@@ -40,3 +40,21 @@ VITE_API_URL=http://localhost:3001
 
 # Vercel Frontend - Variáveis de Ambiente
 # VITE_API_URL=https://bpm-editor-backend.railway.app
+
+# ============================================
+# IA DRAFT BPMN (Gemini)
+# ============================================
+
+# Obrigatório para /api/ai/draft-bpmn
+GEMINI_API_KEY=
+
+# Opcional
+GEMINI_MODEL=gemini-1.5-flash
+AI_DRAFT_POLICY_VERSION=draft-bpmn-policy-v1
+AI_DRAFT_MAX_NODES=24
+AI_DRAFT_MAX_FLOWS=40
+AI_DRAFT_MAX_RESPONSE_BYTES=30000
+AI_AUDIT_LOG_PATH=logs/ai-draft-audit.jsonl
+
+# Necessário para ler logs em /api/ai/draft-bpmn/logs (admin-only)
+AI_ADMIN_TOKEN=
