feat(observability): add /api/version commit metadata endpoint

--- a/.env.example
+++ b/.env.example
@@ -58,3 +58,10 @@ AI_AUDIT_LOG_PATH=logs/ai-draft-audit.jsonl
 
 # Necessário para ler logs em /api/ai/draft-bpmn/logs (admin-only)
 AI_ADMIN_TOKEN=
+
+# ============================================
+# OBSERVABILIDADE (opcional)
+# ============================================
+
+# Fallback para /api/version quando provedor não injeta commit SHA.
+COMMIT_SHA=
